Correct margin spacing beneath image/video posts

--- a/src/app/components/devlog/feed/feed.styl
+++ b/src/app/components/devlog/feed/feed.styl
@@ -46,7 +46,7 @@
 				transition: 0.3s
 					
 		.devlog-post-main
-			margin-bottom: 2em
+			margin-bottom: 1em
 			
 			@media $media-lg
 				margin-left: -65px
