--- a/src/app/components/devlog/post/text/text.styl
+++ b/src/app/components/devlog/post/text/text.styl
@@ -5,6 +5,7 @@
 		background-size: cover
 		background-position: center center
 		overflow: hidden
+		margin-bottom: 2em !important
 		
 		.devlog-post-fill
 			padding: 40px 20px
